syntax = "proto3";

package pluginusermgrpb;

// UpdScriptCommand - updscript command
message UpdScriptCommand {
    // userID - userID
    string userID = 1;    
    // userName - userName
    string userName = 2;
    // scriptName - script name
    string scriptName = 3;
    // jarvisNodeName - jarvis node name
    string jarvisNodeName = 4;
}

// UserScriptsCommand - userscripts command
message UserScriptsCommand {
    // userID - userID
    string userID = 1;    
    // userName - userName
    string userName = 2;
    // jarvisNodeName - jarvis node name
    string jarvisNodeName = 3;
}

// RemoveScriptCommand - rmscript command
message RemoveScriptCommand {
    // userID - userID
    string userID = 1;    
    // userName - userName
    string userName = 2;
    // scriptName - script name
    string scriptName = 3;
}

// ShowScriptCommand - showscript command
message ShowScriptCommand {
    // userID - userID
    string userID = 1;    
    // userName - userName
    string userName = 2;
    // scriptName - script name
    string scriptName = 3;
}